Uploaded login page and forget password page

--- a/HTML/ForgotPass.html
+++ b/HTML/ForgotPass.html
@@ -7,21 +7,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/ForgotPass.css">
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <title>Forgot password</title>
-    <script src="js/bootstrap.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <link rel="icon" href="" type="images/x-icon">
+    <link rel="stylesheet" href="CSS/ForgotPass.css">
 </head>
 
+
 <body>
+
     <div class="main">
+
         <div class="container-fluid">
+
             <div class="row">
-                <div class="col-md-8 col-sm-12 images">
+
+                <div class="col-md-8 m-auto">
 
                     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
@@ -38,81 +43,101 @@
 
                             <div class="carousel-item active" data-bs-interval="1000">
                                 <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>First slide label</h5>
-                                    <p>Some representative placeholder content for the first slide.</p>
+                                    class="d-block w-100 size-fix" alt="...">
+                                <div class="carousel-caption d-none d-md-block" style="color: white; text-align: left;">
+                                    <h5>Lorem ipsum dolor sit amet consectetur.</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia mollitia excepturi
+                                        tenetur architecto saepe enim facere tempora minus earum similique.</p>
                                 </div>
                             </div>
                             <div class="carousel-item" data-bs-interval="2000">
                                 <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Second slide label</h5>
-                                    <p>Some representative placeholder content for the second slide.</p>
+                                    class="d-block w-100 size-fix" alt="...">
+                                <div class="carousel-caption d-none d-md-block" style="color: white; text-align: left;">
+                                    <h5>Lorem ipsum dolor sit amet consectetur.</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia mollitia excepturi
+                                        tenetur architecto saepe enim facere tempora minus earum similique.</p>
                                 </div>
                             </div>
                             <div class="carousel-item" data-bs-interval="2000">
                                 <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Third slide label</h5>
-                                    <p>Some representative placeholder content for the third slide.</p>
+                                    class="d-block w-100 size-fix" alt="...">
+                                <div class="carousel-caption d-none d-md-block" style="color: white; text-align: left;">
+                                    <h5>Lorem ipsum dolor sit amet consectetur.</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia mollitia excepturi
+                                        tenetur architecto saepe enim facere tempora minus earum similique.</p>
                                 </div>
                             </div>
                             <div class="carousel-item" data-bs-interval="2000">
                                 <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Second slide label</h5>
-                                    <p>Some representative placeholder content for the second slide.</p>
+                                    class="d-block w-100 size-fix" alt="...">
+                                <div class="carousel-caption d-none d-md-block" style="color: white; text-align: left;">
+                                    <h5>Lorem ipsum dolor sit amet consectetur.</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia mollitia excepturi
+                                        tenetur architecto saepe enim facere tempora minus earum similique.</p>
                                 </div>
                             </div>
 
                         </div>
-                        
                     </div>
+
                 </div>
-
-
-                <div class="col-md-4 col-sm-12 d-flex flex-column justify-content-between side">
+                <div class="col-md-4 col-sm-12 d-flex flex-column justify-content-between">
                     <div class="row"></div>
                     <div class="row">
-                        <form action="" method="post" name="login">
-                            <div class="forgot">
-                                <p>
-                                    Forgot password
-                                </p>
+                        <div class="myform form">
+                            <div class="logo mb-3">
+                                <div class="col-md-12 text-center">
+                                    <h4>Forget Password</h4>
+                                    <p>Enter your email address you've using for your account below and we will send you
+                                        a reset password link</p>
+                                </div>
                             </div>
-                            <div class="forgotcontent">
-                                <p>
-                                    Enter your email address you've using for your account below and we will send you a password reset link
-                                </p>
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputEmail1" class="email">Email address</label>
-                                <input type="email" name="email" class="form-control" id="email"
-                                    aria-describedby="emailHelp" placeholder="Enter your email address">
-                            </div>
-                            <div class="text-center ">
-                                <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm login"><a href="www.google.com" id="login">Reset my password</a></button>
-                            </div>
-                        </form>
-                        <div class="mb-3">
-                            <p class="text-center lostpassword">
-                                <a href="www.google.com">Login</a>
-                            </p>
+                            <form action="" method="post" name="login">
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1" style="font-size: 1rem; color: #8d8a8a;">Email
+                                        Address</label>
+                                    <input type="email" name="password" id="password" class="form-control mt-1"
+                                        aria-describedby="emailHelp" placeholder="Enter your email address.."
+                                        style="height: 40px;">
+                                </div>
+                                <div class="col-md-12 d-grid gap-2 text-center mt-4">
+                                    <button type="submit" class=" btn btn-block mybtn btn-outline-warning"
+                                        style="border-radius: 50px;">Reset my Password</button>
+                                </div>
+                                <div class="form-group mt-3">
+                                    <p class="text-center" style="font-size: 0.8rem; color: #8d8a8a;">Login</p>
+                                </div>
+                            </form>
+
+                        </div>
+                        <div class="privacylogin" style="font-size: 0.8rem; color: #8d8a8a;">
+                            <p>Privacy Policy</p>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="mb-3">
-                            <p class="text-center policy">
-                                Privacy policy
-                            </p>
-                        </div>
-                    </div>
+
+
                 </div>
+
             </div>
         </div>
+
+
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
+
 </body>
+
+</html>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
