--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -7,21 +7,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;900&display=swap" rel="stylesheet">
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <link rel="icon" href="" type="images/x-icon">
     <link rel="stylesheet" href="CSS/Login.css">
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <title>SRS login</title>
-    <script src="js/bootstrap.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link rel="icon" href="images/favicon.ico" type="images/x-icon">
 </head>
 
+
 <body>
+
     <div class="main">
+
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-8 col-sm-12 images">
+
+            <div class="row ">
+
+                <div class="col-md-8 m-auto">
 
                     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
@@ -38,131 +43,114 @@
 
                             <div class="carousel-item active" data-bs-interval="1000">
                                 <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>First slide label</h5>
-                                    <p>Some representative placeholder content for the first slide.</p>
+                                    class="d-block w-100 size-fix" alt="...">
+                                <div class="carousel-caption d-none d-md-block" style="color: white; text-align: left;">
+                                    <h5>Lorem ipsum dolor sit amet consectetur.</h5>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sint ad dolorem
+                                        ullam? Rem modi blanditiis molestias. Voluptas magnam minus repellat temporibus
+                                        voluptatem itaque officiis.</p>
                                 </div>
                             </div>
                             <div class="carousel-item" data-bs-interval="2000">
                                 <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Second slide label</h5>
-                                    <p>Some representative placeholder content for the second slide.</p>
+                                    class="d-block w-100 size-fix" alt="... ">
+                                <div class="carousel-caption d-none d-md-block" style="color: white; text-align: left;">
+                                    <h5>Lorem ipsum dolor sit amet consectetur.</h5>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur molestias
+                                        maxime iste eum magnam. Obcaecati repellat quia iste accusamus corporis eius, ea
+                                        ullam accusantium necessitatibus?</p>
                                 </div>
                             </div>
                             <div class="carousel-item" data-bs-interval="2000">
                                 <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Third slide label</h5>
-                                    <p>Some representative placeholder content for the third slide.</p>
+                                    class="d-block w-100 size-fix" alt="...">
+                                <div class="carousel-caption d-none d-md-block" style="color: white; text-align: left;">
+                                    <h5>Lorem ipsum dolor sit amet.</h5>
+                                    <p>Lorem ipsumf dolor sit amet consectetur adipisicing elit. Quidem quasi laborum id
+                                        nam neque pariatur suscipit, minus est, repellendus at enim excepturi ipsam
+                                        facilis dignissimos?</p>
                                 </div>
                             </div>
                             <div class="carousel-item" data-bs-interval="2000">
                                 <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                                    class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Second slide label</h5>
-                                    <p>Some representative placeholder content for the second slide.</p>
+                                    class="d-block w-100 size-fix" alt="...">
+                                <div class="carousel-caption d-none d-md-block" style="color: white; text-align: left;">
+                                    <h5>Lorem ipsum dolor sit amet.</h5>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quia tempora
+                                        quibusdam amet architecto et mollitia voluptatem repellat id reprehenderit.
+                                        Voluptate cupiditate explicabo inventore aut.</p>
                                 </div>
                             </div>
 
                         </div>
-                        
                     </div>
+
                 </div>
-
-
                 <div class="col-md-4 col-sm-12 d-flex flex-column justify-content-between">
                     <div class="row"></div>
                     <div class="row">
-                        <form action="" method="post" name="login">
-                            <div class="form-group">
-                                <label for="exampleInputEmail1" class="email">Email address</label>
-                                <input type="email" name="email" class="form-control" id="email"
-                                    aria-describedby="emailHelp" placeholder="evan.donohue@gmail.com">
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputEmail1" class="password">Password</label>
-                                <input type="password" name="password" id="password" class="form-control" aria-describedby="emailHelp" placeholder="**********">
-                            </div>
+                        <div class="myform form">
+                            <div class="myform form">
+                                <div class="logo mb-3">
+                                    <div class="col-md-12 text-center">
+                                        <img src="/Users/jayraj/Desktop/PSD/CI Platform Assets/logo.png" alt="">
+                                    </div>
+                                </div>
+                                <form action="" method="post" name="login">
+                                    <div class="form-group">
+                                        <label for="exampleInputEmail1" style="font-size: 1rem; color: #8d8a8a;">Email
+                                            address</label>
+                                        <input type="email" name="email" class="form-control" id="email"
+                                            aria-describedby="emailHelp" placeholder="Enter email">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleInputEmail1"
+                                            style="font-size: 1rem; color: #8d8a8a;">Password</label>
+                                        <input type="password" name="password" id="password" class="form-control"
+                                            aria-describedby="emailHelp" placeholder="Enter Password">
+                                    </div>
+                                    <div class="col-md-12 d-grid gap-2 text-center mt-4">
+                                        <button type="submit" class=" btn btn-block mybtn btn-outline-warning tx-tfm"
+                                            style="border-radius: 50px;">Login</button>
+                                    </div>
+                                    <div class="form-group mt-3 link">
+                                        <p class="text-center" style="font-size: 0.8rem; color: #8d8a8a;"><a
+                                                href="/D:/Project/SRS/HTML/ForgotPass.html"
+                                                style="color: grey !important;">Lost your Password?</a></p>
+                                    </div>
+                                    <div class="form-group">
+                                        <p class="text-center" style="font-size: 0.8rem; color: #8d8a8a;">Don't have
+                                            account? <a href="#" id="signup">Create an account</a></p>
+                                    </div>
+                                </form>
 
-                            <div class="text-center ">
-                                <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm login"><a href="www.google.com" id="login">Login</a></button>
                             </div>
-                        </form>
-                        <div class="mb-3">
-                            <p class="text-center lostpassword">
-                                Lost your password
-                            </p>
                         </div>
-                        <div class="form-group">
-                            <p class="text-center last">Don't have account? <a href="www.google.com" id="signup">Create an account</a>
-                            </p>
+                        <div class="row privacylogin" style="font-size: 0.8rem; color: #8d8a8a;">
+                            <p>Privacy Policy</p>
                         </div>
 
                     </div>
-                    <div class="row">
-                        <div class="mb-3">
-                            <p class="text-center policy">
-                                Privacy policy
-                            </p>
-                        </div>
-                    </div>
+
                 </div>
+
             </div>
+
+
         </div>
-    </div>
-    <!-- <section class="vh-100 main">
-        <div class="container py-5 h-100">
-            <div class="row d-flex align-items-center justify-content-center h-100">
-                <div class="col-md-8 col-lg-7 col-xl-6">
-                    <img src="images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                        class="img-fluid" alt="Phone image">
-                </div>
-                <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1 content">
-                    <form> -->
-    <!-- Email input -->
-    <!-- <div class="form-outline mb-4">
-                            <label class="form-label email" for="form1Example13">Email address</label>
-                            <input type="email" id="form1Example13" class="form-control form-control-lg" />         
-                        </div> -->
 
-    <!-- Password input -->
-    <!-- <div class="form-outline mb-4">                            
-                            <label class="form-label" for="form1Example23">Password</label>
-                            <input type="password" id="form1Example23" class="form-control form-control-lg" />
-                        </div> -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+            integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+            crossorigin="anonymous"></script>
 
-    <!-- <div class="d-flex justify-content-around align-items-center mb-4"> -->
-    <!-- Checkbox -->
-    <!-- <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
-                                <label class="form-check-label" for="form1Example3"> Remember me </label>
-                            </div>
-                            <a href="#!">Forgot password?</a>
-                        </div> -->
-
-    <!-- Submit button -->
-    <!-- <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
-
-                        <div class="divider d-flex align-items-center my-4">
-                            <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
-                        </div>
-
-                        <a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!"
-                            role="button">
-                            <i class="fab fa-facebook-f me-2"></i>Continue with Facebook
-                        </a>
-                        <a class="btn btn-primary btn-lg btn-block" style="background-color: #55acee" href="#!"
-                            role="button">
-                            <i class="fab fa-twitter me-2"></i>Continue with Twitter</a>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section> -->
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
