--- a/HTML/ForgotPass.html
+++ b/HTML/ForgotPass.html
@@ -87,26 +87,27 @@
                     <div class="row">
                         <div class="myform form">
                             <div class="logo mb-3">
-                                <div class="col-md-12 text-center">
-                                    <h4>Forget Password</h4>
-                                    <p>Enter your email address you've using for your account below and we will send you
+                                <div class="col-md-12 text-center box1">
+                                    <h4 style="font-size: 22px;">Forget Password</h4>
+                                    <p style="font-size: 12px; padding-left: 5%; padding-right: 5%;">Enter your email address you've using for your account below and we will send you
                                         a reset password link</p>
                                 </div>
                             </div>
-                            <form action="" method="post" name="login">
+                            <form action="file:///D:/Project/SRS/HTML/ResetPass.html" method="post" name="login">
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1" style="font-size: 1rem; color: #8d8a8a;">Email
+                                    <label for="exampleInputEmail1" class="box">Email
                                         Address</label>
                                     <input type="email" name="password" id="password" class="form-control mt-1"
                                         aria-describedby="emailHelp" placeholder="Enter your email address.."
                                         style="height: 40px;">
                                 </div>
                                 <div class="col-md-12 d-grid gap-2 text-center mt-4">
-                                    <button type="submit" class=" btn btn-block mybtn btn-outline-warning"
-                                        style="border-radius: 50px;">Reset my Password</button>
+                                    <input type="submit" class=" btn btn-block mybtn btn-outline-warning"
+                                        style="border-radius: 50px;" value="Reset my Password" >
+                                
                                 </div>
                                 <div class="form-group mt-3">
-                                    <p class="text-center" style="font-size: 0.8rem; color: #8d8a8a;">Login</p>
+                                    <p class="text-center" style="font-size: 0.8rem; color: #8d8a8a; font-weight: 500;">Login</p>
                                 </div>
                             </form>
 
