--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -98,14 +98,12 @@
                                 </div>
                                 <form action="" method="post" name="login">
                                     <div class="form-group">
-                                        <label for="exampleInputEmail1" style="font-size: 1rem; color: #8d8a8a;">Email
-                                            address</label>
+                                        <label for="exampleInputEmail1" class="box">Email address</label>
                                         <input type="email" name="email" class="form-control" id="email"
                                             aria-describedby="emailHelp" placeholder="Enter email">
                                     </div>
                                     <div class="form-group">
-                                        <label for="exampleInputEmail1"
-                                            style="font-size: 1rem; color: #8d8a8a;">Password</label>
+                                        <label for="exampleInputEmail1" class="box">Password</label>
                                         <input type="password" name="password" id="password" class="form-control"
                                             aria-describedby="emailHelp" placeholder="Enter Password">
                                     </div>
