Uploaded volunteering mission page

--- a/HTML/NoMissionFound.html
+++ b/HTML/NoMissionFound.html
@@ -165,7 +165,7 @@
 
     <!-- lower nav bar -->
     <div class="container-fluid borderH2">
-        <div class="container d-flex justify-content-center ">
+        <div class="container d-flex justify-content-between ">
 
             <div class="d-flex">
                 <form action="post " class="searchboxh2">
