Completed volunteer listing and worked on story listing page

--- a/HTML/HomeList.html
+++ b/HTML/HomeList.html
@@ -107,7 +107,7 @@
 
 
 
-            <div class="col container d-flex spacearound">
+            <div class="col d-flex" style="justify-content: space-between;">
                 <div>
                     <img src="images/logo.png" class="blocking" style="padding-top: 10%;">
                 </div>
@@ -165,7 +165,7 @@
 
     <!-- lower nav bar -->
     <div class="container-fluid borderH2">
-        <div class="container d-flex justify-content-center ">
+        <div class="d-flex justify-content-around">
 
             <div class="d-flex">
                 <form action="post " class="searchboxh2">
