--- a/HTML/NoMissionFound.html
+++ b/HTML/NoMissionFound.html
@@ -113,11 +113,11 @@
                 </div>
 
                 <div class="leftHeader ">
-                    <ul class="navbar-nav d-flex flex-row blocking justify-content-between" style="padding-top: 7%;">
-                        <li class="nav-item upperButtons">
+                    <ul class="navbar-nav d-flex flex-row justify-content-between" style="padding-top: 7%;">
+                        <li class="nav-item upperButtons blocking">
                             <a class="nav-link" href="#">&nbsp;Stories</a>
                         </li>
-                        <li class="nav-item dropdown upperButtons">
+                        <li class="nav-item dropdown upperButtons blocking">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 &nbsp;Policy &nbsp;
@@ -165,7 +165,7 @@
 
     <!-- lower nav bar -->
     <div class="container-fluid borderH2">
-        <div class="container d-flex justify-content-between ">
+        <div class="container d-flex justify-content-between filter1">
 
             <div class="d-flex">
                 <form action="post " class="searchboxh2">
