--- a/HTML/HomeGrid.html
+++ b/HTML/HomeGrid.html
@@ -112,11 +112,11 @@
                 </div>
 
                 <div class="leftHeader ">
-                    <ul class="navbar-nav d-flex flex-row blocking justify-content-between" style="padding-top: 7%;">
-                        <li class="nav-item upperButtons">
+                    <ul class="navbar-nav d-flex flex-row justify-content-between" style="padding-top: 7%;">
+                        <li class="nav-item upperButtons blocking">
                             <a class="nav-link" href="#">&nbsp;Stories</a>
                         </li>
-                        <li class="nav-item dropdown upperButtons">
+                        <li class="nav-item dropdown upperButtons blocking">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 &nbsp;Policy &nbsp;
