--- a/HTML/Registration.html
+++ b/HTML/Registration.html
@@ -90,7 +90,7 @@
                     <div class="row"></div>
                     <div class="row">
                         <div class="myform">
-                            <form action="" method="post" name="login">
+                            <form action="formhandler" method="post" name="login">
                                 <div class="form-group">
                                     <label for="exampleInputEmail1" class="first"
                                         style="font-size: 0.6rem; color: #8d8a8a; padding-left: 15%; padding-bottom: -1%;">First
@@ -158,10 +158,7 @@
                 </div>
 
             </div>
-
         </div>
-
-
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -172,10 +169,3 @@
         crossorigin="anonymous"></script>
 
 </body>
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-    crossorigin="anonymous"></script>
