--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -118,7 +118,7 @@
                                     </div>
                                     <div class="form-group">
                                         <p class="text-center" style="font-size: 0.8rem; color: #8d8a8a;">Don't have
-                                            account? <a href="#" id="signup">Create an account</a></p>
+                                            account? <a href="file:///D:/Project/SRS/HTML/Registration.html" id="signup">Create an account</a></p>
                                     </div>
                                 </form>
 
