--- a/HTML/HomeGrid.html
+++ b/HTML/HomeGrid.html
@@ -290,7 +290,8 @@
     <div class="container mb-3 mt-3 d-flex justify-content-end">
 
         <div class="dropdown sortbybutton">
-            <button class="btn dropdown-toggle " type="button" data-toggle="dropdown">Sort By &nbsp; &nbsp; &nbsp; &nbsp;<span class="caret"></span></button>
+            <button class="btn dropdown-toggle " type="button" data-toggle="dropdown">Sort By &nbsp; &nbsp; &nbsp;
+                &nbsp;<span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li><a href="#">HTML</a></li>
                 <li><a href="#">CSS</a></li>
@@ -298,9 +299,11 @@
             </ul>
         </div>
 
-        <a href="///D:/Project/SRS/HTML/HomeGrid.html?#"><button class="gridimg"><img src="images/grid.png" alt=""></button></a>
-        <a href="///D:/Project/SRS/HTML/HomeList.html?#"><button class="listimg"><img src="images/list.png" alt=""></button></a>
-        
+        <a href="///D:/Project/SRS/HTML/HomeGrid.html?#"><button class="gridimg"><img src="images/grid.png"
+                    alt=""></button></a>
+        <a href="///D:/Project/SRS/HTML/HomeList.html?#"><button class="listimg"><img src="images/list.png"
+                    alt=""></button></a>
+
     </div>
 
     <div class="container grid-container">
@@ -658,6 +661,17 @@
         </div>
 
     </div>
+
+    <!-- footer -->
+    <div class="container">
+        <div class="EPfooterline "></div>
+        <div class="EPprivacypolicy d-flex justify-content-start mt-3 gap-3">
+            <div class="privacypolicy"><a href="#">Privacy policy</a></div>
+            <div class="contactus"><a href="#"> Contact us</a></div>
+        </div>
+    </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
