--- a/HTML/HomeList.html
+++ b/HTML/HomeList.html
@@ -987,6 +987,15 @@
         </ul>
       </nav>
 
+        <!-- footer -->
+        <div class="container">
+            <div class="EPfooterline "></div>
+            <div class="EPprivacypolicy d-flex justify-content-start mt-3 gap-3">
+                <div class="privacypolicy"><a href="#">Privacy policy</a></div>
+                <div class="contactus"><a href="#"> Contact us</a></div>
+            </div>
+        </div>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
