--- a/HTML/ShareYourStory.html
+++ b/HTML/ShareYourStory.html
@@ -170,7 +170,7 @@
             <div>Enter video url</div>
             <div class="container strUploadBox">
                 <fieldset class="d-flex justify-content-center">
-                    <a href="javascript:void(0)" onclick="$('#pro-image').click()" >
+                    <a href="javascript:void(0)" onclick="$('#pro-image').click()">
                         <div class="strUploadImg d-flex align-items-center flex-column"><i class="bi bi-plus"></i></div>
                         <div class="UploadText">Drag and drop pictures and videos here</div>
                     </a>
@@ -201,6 +201,14 @@
             </div>
         </div>
 
+    </div>
+    <!-- footer -->
+    <div class="container">
+        <div class="EPfooterline "></div>
+        <div class="EPprivacypolicy d-flex justify-content-start mt-3 gap-3">
+            <div class="privacypolicy"><a href="#">Privacy policy</a></div>
+            <div class="contactus"><a href="#"> Contact us</a></div>
+        </div>
     </div>
 
 
